# mongoose

./: .clang-format  .mbedignore  .travis.yml  AGENTS.md  BUILD  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  README.md  UserManual.md  context7.json  main.c  meson.build  mod_lua.c  mongoose.1  mongoose.c  mongoose.h  pack  sbom.cdx.json  testdns.cpp  unit_test.c
.github/: issue_template.md  membrowse-targets.json
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: cifuzz.yml  claude-full-security-scan.yml  claude-pr-security-review.yml  claude-security-review.yml  codeql.yml  fuzz.yml  membrowse-comment.yml  membrowse-onboard.yml  membrowse-report.yml  nightly.yml  nightly_tests.yml  on_demand.yml  quicktest.yml  test.yml  wiztst.yaml  zephyr.yml
LICENSES/: LicenseRef-Cesanta.txt
bindings/csharp/: example.cs  mongoose.cs
bindings/python/: example.py  (+1 more)
docs/: API.md  AndroidBuild.md  BasicWebsite.md  Embed.md  FAQ.md  FileSharing.md  Internals.md  LuaSqlite.md  Options.md  PhpWebsite.md  README.md  ReleaseNotes.md  SSL.md  Usage.md  UserManual.md  build_opts.adoc  coap.adoc  common.adoc  concept.adoc  dns-server.adoc  dns.adoc  http.adoc  index-docinfo.html  index.adoc  index.html  internal.adoc  intro.md  items.json  json-rpc.adoc  mbuf.adoc  mqtt-broker.adoc  mqtt.adoc  net.adoc  net_if.adoc  overview.md  resolv.adoc  tutorial.adoc  uri.adoc  util.adoc
drivers/: README.md  mip_driver_stm32.c  mip_driver_stm32.h
examples/: Makefile  README.md  auth.c  auth_basic.c  authentication.c  big_upload.c  ca.pem  chat.c  client.pem  device-dashboard  example.c  examples.mk  file.c  form.c  hello.c  hello.lp  helloworld.cpp  json.cpp  lua_dll.c  main.cpp  make_settings.mak  mjpg.c  multi_threaded.c  post.c  proxy.c  pubsub.html  qcomm.c  rp2040  rules.mk  server.c  server.pem  sse.html  unit_test.c  upload.c  websocket.c  websocket.cpp  websocket.html  websocket2.c
examples/esp32/device-dashboard/main/: CMakeLists.txt  main.c  mjson.c  mjson.h  mongoose_config.h  wifi.c
examples/esp32/uart-bridge/main/: CMakeLists.txt  cli.c  main.c  main.h  mongoose.c  net.c  packed_fs.c  uart.c  wifi.c
examples/pico-sdk/pico-w-picosdk-freertos-lwip/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  main.c
examples/pico-sdk/w5500-evb-pico-picosdk-baremetal-builtin/: CMakeLists.txt  README.md  main.c  mongoose_config.h
examples/rp2040/pico-rmii/: CMakeLists.txt  README.md  driver_rp2040_rmii.c  driver_rp2040_rmii.h  main.c  mongoose_config.h
examples/rp2040/pico-rndis-dashboard/: CMakeLists.txt  Makefile  README.md  main.c  tusb_config.h
examples/rp2040/pico-w5500/: CMakeLists.txt  Makefile  README.md  main.c  mongoose_config.h  tlsconf.h
examples/zephyr/device-dashboard/: CMakeLists.txt  Makefile  prj.conf
examples/zephyr/device-dashboard/src/: main.c  mongoose.c  net.c  packed_fs.c
examples/zephyr/mqtt-aws-client/: CMakeLists.txt  Makefile  prj.conf
examples/zephyr/mqtt-aws-client/src/: certs.h  main.c
examples/zephyr/websocket-server/: CMakeLists.txt  Makefile  prj.conf
examples/zephyr/websocket-server/src/: main.c  mongoose.c  mongoose_config.h
freertos/: heap_3.c
fuzz/: Makefile  fuzz.mk
jni/: Android.mk
lua-5.2.1/: README
mip/: README.md  driver_enc28j60.c  driver_imx_rt1020.c  driver_imx_rt1020.h  driver_stm32.c  driver_stm32.h  driver_stm32h.c  driver_stm32h.h  driver_teensy41.c  driver_teensy41.h  driver_tm4c.c  driver_tm4c.h  driver_w5500.c  mip.c  mip.h
mongoose/: Container.h  Controller.cpp  Controller.h  JsonController.cpp  JsonController.h  JsonResponse.cpp  JsonResponse.h  LICENSE  Mutex.cpp  Mutex.h  Request.cpp  Request.h  RequestHandler.h  Response.cpp  Response.h  Server.cpp  Server.h  Session.cpp  Session.h  Sessions.cpp  Sessions.h  StreamResponse.cpp  StreamResponse.h  UploadFile.cpp  UploadFile.h  Utils.cpp  Utils.h  WebController.cpp  WebController.h  WebSocket.cpp  WebSocket.h  WebSockets.cpp  WebSockets.h
reference-projects/: README.md
resources/: AGENTS.md  dashboard.js  html2c.js  inline.js  pack.js  sign.js  watch.js
scripts/: embed_binary_files.pl
src/: CPPLINT.cfg  arch.h  arch_armcgt.h  arch_armgcc.h  arch_azurertos.h  arch_cube.h  arch_esp32.h  arch_esp8266.h  arch_freertos.h  arch_freertos_lwip.h  arch_freertos_tcp.h  arch_mcuxpresso.h  arch_newlib.h  arch_picosdk.h  arch_rp2040.h  arch_rtthread.h  arch_rtx.h  arch_rtx_lwip.h  arch_threadx.h  arch_tirtos.h  arch_unix.h  arch_wasm.h  arch_win32.h  arch_zephyr.h  base64.c  base64.h  bsd.c  bsd.h  certs.h  coap.c  common.h  config.h  dash.c  dash.h  dbl.c  device.h  device_ch32v307.c  device_dummy.c  device_flash.c  device_imxrt.c  (+191 more)
test/: Makefile  all_build_flags.pl  atcmd_test.c  ca.pem  check.sh  client.pem  dhcpd.conf  driver_mock.c  embed.c  env.cgi  eth_test.c  fuzz.c  fuzz_tls.c  fuzz_ws.c  ga_docker_daemon.json  health.awk  health.sh  index_cgi.c  match_changed_files.sh  mip_curl.sh  mip_port_test.c  mip_tap_test.c  mip_test.c  mip_x_test.c  mongoose.c  mongoose.h  mongoose_config_template.h  mongoose_custom.c  mongoose_custom.h  mosquitto.conf  mosquitto.conf.macos  pack.c  pack.js  packed_fs.c  page.lp  passfile  port_tap_bridge.c  ppp_test.c  pppoe-server-options  pppoe_tap_test.c  (+20 more)
tools/: README.md  amalgam  amalgam.py  amalgam.sh  unamalgam.py  unamalgam.sh  version.py
tutorials/: README.md  device-dashboard
tutorials/http/device-dashboard/esp32/main/: CMakeLists.txt  mongoose.c  mongoose_config.h  packed_fs.c  wifi.c
tutorials/http/http-download-manager/: CMakeLists.txt  README.md  config.h.in  http-download-manager.c  mongoose.c  mongoose.h
tutorials/http/uart-bridge/esp32/main/: CMakeLists.txt  main.c  main.h  mongoose_config.h  uart.c  wifi.c
tutorials/pico-sdk/pico-2-w-picosdk-baremetal-builtin-ap/: CMakeLists.txt  Makefile  main.c  mongoose_config.h
tutorials/pico-sdk/w5500_evb_pico2/: CMakeLists.txt  Makefile
tutorials/pico-sdk/w55rp20_evb_pico/: CMakeLists.txt  Makefile  main.c
tutorials/rp/pico-rndis/: CMakeLists.txt  msc_disk.c
win32/: README.txt  dll.def  installer.nsi  mongoose.conf  res.rc
(+4777 files in other folders)
